# KSeqCpp

./: Makefile.am  configure  configure.ac
src/: KSeqCpp.cc  KSeqCpp.h  Makefile.am  Makefile.in
test/: Makefile.am  Makefile.in  testKSeqCpp.cc
test/data/: small.fastq
